# echotalk-server

./: .gitignore  config.py  database.py  main.py  models.py  pyproject.toml
app/api/: main.py
app/api/routes/: auth.py  chat.py  docs.py  message.py  upload.py
app/core/: chain.py  config.py  prompt_template.py  rag.py  utils.py
app/crud/: chat.py  message.py  upload.py  user.py
app/db/: database.py  models.py  mysql.py  pinecone.py
app/schemas/: chat.py  message.py  upload.py  user.py
app/service/: chain.py  docs.py  rag.py  utils.py
chroma/: huggingface.py  init_chroma.py  initialize_chromadb.py
client/: package-lock.json
client/src/: App.tsx  index.css
client/src/components/: ChatbotUI.module.css  ChatbotUI.tsx  DateLabels.module.css  DateLabels.tsx  Header.tsx  LanguageToggle.tsx
public/: docs1.json
server/: .gitignore  main.py
server/app/api/: main.py  routes.py
server/app/api/routes/: chat.py  home.py
server/app/core/: config.py
server/app/crud/: conversation.py  history.py
server/app/db/: connection.py  pinecone.py
server/app/models/: schema.py
