[project]
name = "echotalk-server"
version = "0.1.0"
description = ""
authors = [
    {name = "mintuchel",email = "max3627@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pymysql",
    "pydantic",
    "pydantic-settings",
    "pytz",
    "pinecone-client",
    "langchain",
    "langchain-openai",
    "langchain-pinecone"
]

[tool.poetry.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
